# Forex-Arbitrage

./: .gitignore  README.md
backend/: engine_runner.py  main.py  models.py
forex_cycles/: CMakeLists.txt
forex_cycles/data/: FetchData.py  forex-rates.csv
forex_cycles/src/: cycle_finder.cpp  cycle_finder.hpp  graph_builder.cpp  graph_builder.hpp  main.cpp  parser.cpp  parser.hpp  test_igraph.cpp
forex_cycles/src/currency_service/: currency_service.cpp  currency_service.hpp
forex_cycles/src/data/: FetchData.py
forex_cycles/src/engine/: arbitrage_engine.cpp  arbitrage_engine.hpp  engine_types.hpp
forex_cycles/src/graph/: cycle_finder.cpp  cycle_finder.hpp  graph_builder.cpp  graph_builder.hpp  test_igraph.hpp
forex_cycles/src/parser/: parser.cpp  parser.hpp
forex_cycles/src/rate_service/: rate_service.cpp  rate_service.hpp
forex_cycles/src/services/: currency_service.cpp
forex_cycles/src/simulation/: simulation.cpp  simulation.hpp
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx
frontend/src/api/: arbitrage.ts
frontend/src/components/: ControlPanel.tsx  CurrencySidebar.tsx  CustomNode.tsx  CytoscapeGraph.tsx  ResultsPanel.tsx
frontend/src/hooks/: use-graph-layout.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/types/: arbitrage.ts
